tests/errors/E020.zen
bool main() {
    return 5 == true;    // E020: Comparison operator used with incompatible types
}